--- a/index.html
+++ b/index.html
@@ -16,23 +16,22 @@
             <button class="delete">DELETE</button>
         </div>
         <div class="arithmetic-buttons">
-                <button class="7 numeric-button">7</button>
-                <button class="8 numeric-button">8</button>
-                <button class="9 numeric-button">9</button>
-                <button class="/ non-numeric-button">÷</button>
-                <button class="4 numeric-button">4</button>
-                <button class="5 numeric-button">5</button>
-                <button class="6 numeric-button">6</button>
-                <button class="* non-numeric-button">×</button>
-                <button class="1 numeric-button">1</button>
-                <button class="2 numeric-button">2</button>
-                <button class="3 numeric-button">3</button>
-                <button class="- non-numeric-button">-</button>
-                <button class=". non-numeric-button">.</button>
-                <button class="0 numeric-button">0</button>
-                <button class="= non-numeric-button">=</button>
-                <button class="+ non-numeric-button">+</button>
-            
+                <button class="7 numeric-button" value="7">7</button>
+                <button class="8 numeric-button" value="8">8</button>
+                <button class="9 numeric-button" value="9">9</button>
+                <button class="/ non-numeric-button" value="/">÷</button>
+                <button class="4 numeric-button" value="4">4</button>
+                <button class="5 numeric-button" value="5">5</button>
+                <button class="6 numeric-button" value="6">6</button>
+                <button class="* non-numeric-button" value="*">×</button>
+                <button class="1 numeric-button" value="1">1</button>
+                <button class="2 numeric-button" value="2">2</button>
+                <button class="3 numeric-button" value="3">3</button>
+                <button class="- non-numeric-button" value="-">-</button>
+                <button class=". non-numeric-button" value=".">.</button>
+                <button class="0 numeric-button" value="0">0</button>
+                <button class="= equals">=</button>
+                <button class="+ non-numeric-button" value="+">+</button>
         </div>
     </div>
 </body>
